Fixed the home page on mobile devices.
There should be no more blank spaces (Still testing).

--- a/home_style.css
+++ b/home_style.css
@@ -188,8 +188,7 @@ nav {
     display: inline-block;
     color: gray;
     margin-top: 30px;
-    padding-right: 30vw;
-    width: 100%;
+    width: 90%;
     overflow: hidden;
     color: transparent;
     animation:
